--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/ssr": "^20.1.0",
     "express": "^5.1.0",
     "primeflex": "^4.0.0",
+    "primeng": "^20.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
