resolvendo conflitos de dependencias

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
-    "@angular/ssr": "^20.1.0",
+    "@angular/ssr": "^20.1.6",
+    "@nguniversal/common": "^16.2.0",
+    "@nguniversal/express-engine": "^16.2.0",
     "express": "^5.1.0",
     "primeflex": "^4.0.0",
     "primeng": "^20.0.1",
