--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
     "@angular/ssr": "^20.1.6",
-    "@nguniversal/common": "^16.2.0",
-    "@nguniversal/express-engine": "^16.2.0",
+    "@primeuix/themes": "^1.2.3",
     "express": "^5.1.0",
     "primeflex": "^4.0.0",
-    "primeng": "^20.0.1",
+    "primeng": "^20.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
