--- a/package.json
+++ b/package.json
@@ -31,18 +31,21 @@
     "@angular/platform-browser": "^20.1.0",
     "@angular/platform-server": "^20.1.0",
     "@angular/router": "^20.1.0",
-    "@angular/ssr": "^20.1.6",
+    "@angular/ssr": "^20.2.2",
+    "@fontsource/inter": "^5.2.6",
+    "@primeng/themes": "^20.1.1",
     "@primeuix/themes": "^1.2.3",
     "express": "^5.1.0",
     "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^20.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.0",
-    "@angular/cli": "^20.1.0",
+    "@angular/build": "^20.2.2",
+    "@angular/cli": "^20.2.2",
     "@angular/compiler-cli": "^20.1.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
